Fixed background image not showing

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
 body {
     font-family: 'Winky Sans', cursive, sans-serif;
     font-weight: 1000;
-    background-image: url("media/background.png");
+    background-image: url("../media/background.png");
     background-color: #fff0f5;
     color: #000000;
     display: flex;
